added endpoint, changed openapi and prepared tests
